# MapLayout

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
scripts/: run-node-tests.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CompassArrow.tsx  GeomanMap.tsx  TileSourceManager.tsx
src/lib/: coordinateSystems.test.mjs  coordinateSystems.ts  geojsonUtils.test.mjs  geojsonUtils.ts  projectFile.test.mjs  projectFile.ts  shapefileImport.test.mjs  shapefileImport.ts  tauriConfig.test.mjs  tileSources.ts  vectorLayerStyle.test.mjs  vectorLayerStyle.ts  vectorTextStyle.test.mjs  vectorTextStyle.ts
src/types/: but-unzip.d.ts  shpjs.d.ts
