[package]
name = "MapLayout"
version = "0.1.0"
description = "影像布局工具"
authors = ["MapLayout"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
